# kd_tree

./: README.md  knn1.h  knn_3d.cpp  knn_4d.cpp  median.h  readme.md  seq_kd_tree.cpp  test.data
cgal_knn/: CMakeLists.txt  knn_3d.cpp
